force-app/main/default/objects/OCE__BusinessTactic__c/OCE__BusinessTactic__c.object-meta.xml
<CustomObject>
    <description>Connected Tactics to the Business Template.</description>
    <label>Business Tactic</label>
    <nameField>
        <label>Business Tactic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Tactics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>