force-app/main/default/objects/OCE__BusinessTactic__c/fields/OCE__BusinessObjective__c.field-meta.xml
<CustomField>
    <fullName>OCE__BusinessObjective__c</fullName>
    <description>Link to parent Business Objective.</description>
    <label>Business Objective</label>
    <referenceTo>OCE__BusinessObjective__c</referenceTo>
    <relationshipLabel>Business Tactics</relationshipLabel>
    <relationshipName>BusinessTactics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>