force-app/main/default/objects/OCE__BusinessTactic__c/fields/OCE__DueDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__DueDate__c</fullName>
    <description>End of duration for Business Tactics.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>