force-app/main/default/objects/OCE__BusinessTactic__c/fields/OCE__ObjectiveRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>OCE__ObjectiveRecordTypeName__c</fullName>
    <description>Related Business Objective record type developer name</description>
    <formula>OCE__BusinessObjective__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ObjectiveRecordTypeName</label>
    <type>Text</type>
</CustomField>