force-app/main/default/objects/OCE__BusinessTactic__c/fields/OCE__ParentTactic__c.field-meta.xml
<CustomField>
    <fullName>OCE__ParentTactic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to Parent Level Business Tactic</description>
    <label>Parent Tactic</label>
    <referenceTo>OCE__BusinessTactic__c</referenceTo>
    <relationshipLabel>Business Tactics</relationshipLabel>
    <relationshipName>ChildTactics</relationshipName>
    <type>Lookup</type>
</CustomField>