force-app/main/default/objects/OCE__BusinessTactic__c/fields/OCE__PercentComplete__c.field-meta.xml
<CustomField>
    <fullName>OCE__PercentComplete__c</fullName>
    <description>Capture percentage of completion</description>
    <label>Completion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>