force-app/main/default/objects/OCE__BusinessTactic__c/fields/OCE__UniqueIntegrationID__c.field-meta.xml
<CustomField>
    <fullName>OCE__UniqueIntegrationID__c</fullName>
    <description>Do not use this field, is not external, not unique and not case sensitive.</description>
    <inlineHelpText>Do not use this field, is not external, not unique and not case sensitive.</inlineHelpText>
    <label>Non Unique Integration ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>